BookKeepingPlatform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookkeeping-app
  namespace: bookkeeping-platform
spec:
  selector:
    app: bookkeeping-app
  ports:
    - name: http
      port: 80
      targetPort: http
