BookKeepingPlatform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookkeeping-app
  namespace: bookkeeping-platform
spec:
  ingressClassName: nginx
  rules:
    - host: bookkeeping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookkeeping-app
                port:
                  number: 80
